package com.fges.todoapp.options;

public interface Option {
    void apply(String[] args) throws Exception;
}
